--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@floating-ui/react": "^0.27.4",
     "@headlessui/react": "^2.2.0",
-    "@stripe/mcp": "^0.2.1",
     "@stripe/stripe-js": "^5.5.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.47.10",
@@ -21,7 +20,7 @@
     "framer-motion": "^12.4.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
-    "next": "15.1.3",
+    "next": "^15.5.3",
     "posthog-js": "^1.219.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
